# lineup-optimizer

./: .gitignore  ABOUT.md  CLAUDE.md  GEMINI.md  README.md  TODO.md  about.html  analyze_spring.py  backtester.py  batch_backtester.py  build_crosswalk.py  check_minors.py  check_projections.py  config.py  crosswalks.py  daily_engine.py  defense_harvester.py  display_utils.py  enricher.py  fa_backtester.py  fetch_statcast.py  gameday_harvester.py  harvester.py  index.html  lineup_7581_atc_today.json  lineup_7581_atc_tomorrow.json  lineup_7581_steamer_today.json  lineup_7581_steamer_tomorrow.json  lineup_7582_atc_today.json  lineup_7582_atc_tomorrow.json  lineup_7582_steamer_today.json  lineup_7582_steamer_tomorrow.json  lineup_7587_atc_today.json  lineup_7587_atc_tomorrow.json  lineup_7587_steamer_today.json  lineup_7587_steamer_tomorrow.json  lineup_7641_atc_today.json  lineup_7641_atc_tomorrow.json  lineup_7641_steamer_today.json  lineup_7641_steamer_tomorrow.json  (+84 more)
.claude/: settings.local.json
.github/workflows/: daily_refresh.yml  hourly_optimizer.yml
