[project]
name = "lineup-optimizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "mlb-statsapi>=1.9.0",
    "pandas>=3.0.1",
    "pybaseball>=2.2.7",
    "requests>=2.32.5",
    "tabulate>=0.10.0",
]
