[project]
name = "lineup-optimizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "google-genai>=1.67.0",
    "mlb-statsapi>=1.9.0",
    "pandas>=3.0.1",
    "pybaseball>=2.2.7",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "tabulate>=0.10.0",
]
